<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/white"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

    <LinearLayout
        android:id="@+id/layoutThankYou"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/thumbs_up" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:text="@string/text_terimakasih_daftar" />

        <Button
            android:id="@+id/buttonBack2Login"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="17dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:background="@drawable/bottom_border"
            android:paddingLeft="12dp"
            android:text="Pendaftaran" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bottom_border"
            android:paddingLeft="12dp"
            android:text="@string/text_akun"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_nama_lengkap"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_alamat"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextKontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_kontak"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_usernames"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPasswordLagi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_password_lagi"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_save" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:src="@drawable/logo_rth" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/text_harap_login" />

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal|center"
            android:inputType="textEmailAddress"
            android:text="@string/text_email" />

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal|center"
            android:inputType="textPassword"
            android:text="@string/text_password" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login" />

        <TextView
            android:id="@+id/textDaftarSekarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text_register" />

    </LinearLayout>
</LinearLayout>
