<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">


    <TextView
        android:id="@+id/textViewTitlePendaftaran7"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="12dp"
        android:text="@string/text_daftar_produk"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:drawableLeft="@drawable/search"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/text_pencarian"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/cartsmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearFragment"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center|fill"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/LinearItemDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/text_nama_produk" />

            <TextView
                android:id="@+id/TextViewProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/text_harga_produk" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/text_quantity"
                android:inputType="number" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tambah_produk" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>