<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout
        android:id="@+id/layoutThankYou"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/thumbs_up" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:text="@string/text_terimakasih_order" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="17dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_ok" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitleCart"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="12dp"
        android:text="@string/text_mycart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LinearLayoutCheckout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_subtotal_produk" />

            <TextView
                android:id="@+id/TextViewSubTotalProduk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_subtotal_kurir" />

            <TextView
                android:id="@+id/TextViewSubTotalKurir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_total_pembayaran" />

            <TextView
                android:id="@+id/TextViewSubTotalPembayaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutCheckout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/note" />

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="118dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_corner"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/EditTextAlamatPengiriman"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:hint="@string/text_pesan_catatan"
                        android:inputType="textMultiLine" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:paddingLeft="20dp"
                    android:text="@string/text_pesan" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/cash" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_metode_pembayaran" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/payment" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutCheckout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/maps" />

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="118dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_corner"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/EditTextAlamatPengiriman"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:inputType="textMultiLine" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:paddingLeft="20dp"
                    android:text="@string/text_alamat_penerima" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/delivery" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_kurir" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/kurir" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@android:color/background_light"
                    android:paddingLeft="20dp"
                    android:text="@string/text_estimasi_biaya" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutCart"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LinearItemProduk"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ImageDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/delete" />

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:text="@string/text_nama_produk" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:layout_weight="1"
                            android:text="@string/text_harga_produk" />

                        <ImageView
                            android:id="@+id/ImageUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/up" />

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center_vertical|center_horizontal"
                            android:hint="@string/text_quantity"
                            android:inputType="number" />

                        <ImageView
                            android:id="@+id/ImageDown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/down" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </ScrollView>


        <TextView
            android:id="@+id/TextViewSubTotalKeseluruhan"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text_subtotal_harga" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text_next" />

    </LinearLayout>

</LinearLayout>